# SpiderCam

./: CMakeLists.txt  README.md
src/: main.cpp
src/io/: io.cpp  io.hpp
src/kamera/: kamera.cpp  kamera.hpp
src/math/: math.hpp
src/spielfeld/: spielfeld.cpp  spielfeld.hpp
